Added training loop for PyTorch Model

--- a/Notebooks/Models/Model_Sandbox.ipynb
+++ b/Notebooks/Models/Model_Sandbox.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "7c7287ee-1f85-4bff-a57b-c41589bcdc25",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "85a65ffd-3144-43fc-a9ce-73c3242740e2",
    "metadata": {},
    "outputs": [
@@ -199,7 +199,7 @@
    ],
    "source": [
     "#Use base model from early computer vision\n",
-    "from models import BaseNeuralNetwork\n",
+    "from models import BaseNeuralNetwork, train_loop\n",
     "\n",
     "device= \"cpu\"\n",
     "base_model= BaseNeuralNetwork().to(device)\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7cf8cc48-9b61-40ff-a734-bdf84dedb5ba",
    "metadata": {},
    "outputs": [
@@ -224,8 +224,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([32, 4, 300, 300])\n",
-      "torch.Size([32, 1])\n"
+      "torch.Size([64, 4, 300, 300])\n",
+      "torch.Size([64, 1])\n",
+      "torch.Size([256, 4, 300, 300])\n",
+      "torch.Size([256, 1])\n"
      ]
     }
    ],
@@ -241,68 +243,188 @@
     "                      lr= 10 ** -3,\n",
     "                       momentum= .9)\n",
     "\n",
-    "batch_size= 32\n",
+    "batch_size= 64\n",
     "\n",
     "#Create DataLoader iterable\n",
-    "train_dataloader= DataLoader(train_dataset, batch_size= batch_size)\n",
+    "train_dataloader= DataLoader(train_dataset, batch_size= batch_size, shuffle= False)\n",
+    "test_dataloader= DataLoader(test_dataset, batch_size= len(test_dataset), shuffle= False)\n",
     "\n",
     "#Sanity Check\n",
     "for x, y in train_dataloader:\n",
     "    print(x.shape)\n",
     "    print(y.shape)\n",
-    "    break                                        "
+    "    break          \n",
+    "#Sanity Check\n",
+    "for x, y in test_dataloader:\n",
+    "    print(x.shape)\n",
+    "    print(y.shape)\n",
+    "    break "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "c5d1af89-5ad3-46bc-8125-3c1d787e3425",
+   "execution_count": 7,
+   "id": "5a1b5b2b-23bf-4509-af35-61ff89d4dc7a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1 Results\n",
-      "-----------------------\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "1D target tensor expected, multi-target not supported",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/yv/nkm_y3rj0bj50pcbjh23kfd80000gn/T/ipykernel_2699/4077568397.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mbatch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_dataloader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mpred\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mbase_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0;31m#Backprop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniforge3/envs/PyTorch/lib/python3.8/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m_call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    887\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    888\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 889\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    890\u001b[0m         for hook in itertools.chain(\n\u001b[1;32m    891\u001b[0m                 \u001b[0m_global_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniforge3/envs/PyTorch/lib/python3.8/site-packages/torch/nn/modules/loss.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input, target)\u001b[0m\n\u001b[1;32m   1045\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1046\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTensor\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1047\u001b[0;31m         return F.cross_entropy(input, target, weight=self.weight,\n\u001b[0m\u001b[1;32m   1048\u001b[0m                                ignore_index=self.ignore_index, reduction=self.reduction)\n\u001b[1;32m   1049\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniforge3/envs/PyTorch/lib/python3.8/site-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mcross_entropy\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction)\u001b[0m\n\u001b[1;32m   2688\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msize_average\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mreduce\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2689\u001b[0m         \u001b[0mreduction\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlegacy_get_string\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize_average\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduce\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2690\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mnll_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_softmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2691\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2692\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniforge3/envs/PyTorch/lib/python3.8/site-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mnll_loss\u001b[0;34m(input, target, weight, size_average, ignore_index, reduce, reduction)\u001b[0m\n\u001b[1;32m   2383\u001b[0m         )\n\u001b[1;32m   2384\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mdim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2385\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnll_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2386\u001b[0m     \u001b[0;32melif\u001b[0m \u001b[0mdim\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2387\u001b[0m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_C\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_nn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnll_loss2d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_Reduction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_enum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreduction\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: 1D target tensor expected, multi-target not supported"
+      "loss: 0.692595  [   64/ 1027]\n",
+      "loss: 0.657384  [  128/ 1027]\n",
+      "loss: 0.596722  [  192/ 1027]\n",
+      "loss: 0.535421  [  256/ 1027]\n",
+      "loss: 0.566393  [  320/ 1027]\n",
+      "loss: 0.510413  [  384/ 1027]\n",
+      "loss: 0.474450  [  448/ 1027]\n",
+      "loss: 0.380675  [  512/ 1027]\n",
+      "loss: 0.411957  [  576/ 1027]\n",
+      "loss: 0.337791  [  640/ 1027]\n",
+      "loss: 0.415704  [  704/ 1027]\n",
+      "loss: 0.377260  [  768/ 1027]\n",
+      "loss: 0.391146  [  832/ 1027]\n",
+      "loss: 0.261502  [  896/ 1027]\n",
+      "loss: 0.293247  [  960/ 1027]\n",
+      "loss: 0.287931  [ 1024/ 1027]\n",
+      "loss: 0.344794  [   51/ 1027]\n"
      ]
     }
    ],
    "source": [
+    "train_loop(train_dataloader, base_model, criterion, optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "585a5310-72ad-44a3-9326-05a661173680",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "208f0737-f79a-42da-9097-84ee1bafd62c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stop' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/yv/nkm_y3rj0bj50pcbjh23kfd80000gn/T/ipykernel_3032/3957423419.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3aba90ad-c06d-418d-b63b-ec0bbd4612a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07c3b7b5-36f8-4853-8157-482d50c03877",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for batch, (X, y) in enumerate(train_dataloader):\n",
+    "    print(batch )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5d1af89-5ad3-46bc-8125-3c1d787e3425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#For Loop\n",
     "epochs = 5\n",
     "\n",
+    "base_model.train()\n",
     "for e in range(epochs):\n",
+    "    print(\"-----------------------\")\n",
     "    print(f\"Epoch {e + 1} Results\\n-----------------------\")\n",
+    "    \n",
     "    #Training Loop\n",
     "    size= len(train_dataloader.dataset)\n",
     "        #compute predictions and loss\n",
     "    for batch, (X,y) in enumerate(train_dataloader):\n",
-    "        pred= base_model(X.float())\n",
-    "        loss= criterion(pred, y)\n",
     "        \n",
-    "        #Backprop\n",
-    "        optimizer.zero_grad()\n",
+    "        #Make predictions and compute loss\n",
+    "        pred= base_model(X.float())\n",
+    "        loss= criterion(pred, y.flatten())\n",
+    "        \n",
+    "        #Always zero gradients for each batch\n",
+    "        optimizer.zero_grad() #Should i move this?\n",
+    "        \n",
+    "        #Calculate gradient        \n",
     "        loss.backward()\n",
-    "    #Test Loop\n",
+    "        \n",
+    "        #Adjust model's weights\n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        #Output stats\n",
+    "        if batch % 64 != 0:\n",
+    "            loss, curr = loss.item(), batch * len(X)\n",
+    "            print(f\"Loss: {loss:7f} [{curr:>5d}/{size:>5d}]\")  \n",
     "    \n",
-    "https://stackoverflow.com/questions/57325844/pytorch-multi-target-not-supported-error-message\n",
+    "    #Test Loop\n",
+    "    size = len(test_dataloader.dataset)\n",
+    "    num_batches= len(test_dataloader)\n",
+    "    test_loss, correct = 0,0\n",
+    "    \n",
+    "    with torch.no_grad(): #turns off gradient calculation\n",
+    "        for X, y in test_dataloader:\n",
+    "            pred= base_model(X.float())\n",
+    "            test_loss += criterion(pred, y.flatten()).item()\n",
+    "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
+    "    \n",
+    "    test_loss /= num_batches\n",
+    "    correct /= size\n",
+    "    print(f\"Test Accuracy:\\nAccuracy: {(100*correct)/size:>.01f}%, Avg loss: {test_loss:>5f}\\n\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99860e1c-1c7b-46cb-91dd-7832a0ef28d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06936a34-c60e-473a-a5e2-58f2af6e0dfb",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for batch, (X,y) in enumerate(train_dataloader):\n",
+    "    print(batch)\n",
+    "    print(X)\n",
+    "    print(y)\n",
+    "    break\n"
    ]
   },
   {
@@ -311,7 +433,9 @@
    "id": "7e1fc79a-b4bc-4e7a-a272-a1f1fc3d304c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y.flatten().to(device)"
+   ]
   },
   {
    "cell_type": "code",
