--- a/Notebooks/Models/Model_Sandbox.ipynb
+++ b/Notebooks/Models/Model_Sandbox.ipynb
@@ -199,7 +199,7 @@
    ],
    "source": [
     "#Use base model from early computer vision\n",
-    "from models import BaseNeuralNetwork, train_loop\n",
+    "from models import BaseNeuralNetwork, train_loop, test_loop\n",
     "\n",
     "device= \"cpu\"\n",
     "base_model= BaseNeuralNetwork().to(device)\n",
@@ -238,7 +238,7 @@
     "\n",
     "\n",
     "#Set up loss function, optimizer and batch\n",
-    "criterion = nn.CrossEntropyLoss()\n",
+    "criterion = torch.nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(base_model.parameters(),\n",
     "                      lr= 10 ** -3,\n",
     "                       momentum= .9)\n",
@@ -246,7 +246,7 @@
     "batch_size= 64\n",
     "\n",
     "#Create DataLoader iterable\n",
-    "train_dataloader= DataLoader(train_dataset, batch_size= batch_size, shuffle= False)\n",
+    "train_dataloader= DataLoader(train_dataset, batch_size= batch_size, shuffle= False, drop_last= True)\n",
     "test_dataloader= DataLoader(test_dataset, batch_size= len(test_dataset), shuffle= False)\n",
     "\n",
     "#Sanity Check\n",
@@ -263,178 +263,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5a1b5b2b-23bf-4509-af35-61ff89d4dc7a",
+   "execution_count": null,
+   "id": "9b34d409-fdd4-4bf3-b4b4-dd3503f72b7c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss: 0.692595  [   64/ 1027]\n",
-      "loss: 0.657384  [  128/ 1027]\n",
-      "loss: 0.596722  [  192/ 1027]\n",
-      "loss: 0.535421  [  256/ 1027]\n",
-      "loss: 0.566393  [  320/ 1027]\n",
-      "loss: 0.510413  [  384/ 1027]\n",
-      "loss: 0.474450  [  448/ 1027]\n",
-      "loss: 0.380675  [  512/ 1027]\n",
-      "loss: 0.411957  [  576/ 1027]\n",
-      "loss: 0.337791  [  640/ 1027]\n",
-      "loss: 0.415704  [  704/ 1027]\n",
-      "loss: 0.377260  [  768/ 1027]\n",
-      "loss: 0.391146  [  832/ 1027]\n",
-      "loss: 0.261502  [  896/ 1027]\n",
-      "loss: 0.293247  [  960/ 1027]\n",
-      "loss: 0.287931  [ 1024/ 1027]\n",
-      "loss: 0.344794  [   51/ 1027]\n"
+      "Epoch 1:\n",
+      "----------------------------\n",
+      "loss: 0.697754  [    0/ 1027]\n",
+      "loss: 0.675377  [   64/ 1027]\n",
+      "loss: 0.623814  [  128/ 1027]\n",
+      "loss: 0.626251  [  192/ 1027]\n",
+      "loss: 0.601297  [  256/ 1027]\n",
+      "loss: 0.715795  [  320/ 1027]\n",
+      "loss: 0.516409  [  384/ 1027]\n",
+      "loss: 0.501635  [  448/ 1027]\n",
+      "loss: 0.439040  [  512/ 1027]\n",
+      "loss: 0.446919  [  576/ 1027]\n",
+      "loss: 0.432253  [  640/ 1027]\n",
+      "loss: 0.372604  [  704/ 1027]\n",
+      "loss: 0.354605  [  768/ 1027]\n",
+      "loss: 0.376940  [  832/ 1027]\n",
+      "loss: 0.320026  [  896/ 1027]\n",
+      "loss: 0.434664  [  960/ 1027]\n",
+      "Test Error: \n",
+      " Accuracy: 73.0%, Avg loss: 1.006387 \n",
+      "\n",
+      "Epoch 2:\n",
+      "----------------------------\n",
+      "loss: 0.366628  [    0/ 1027]\n",
+      "loss: 0.289138  [   64/ 1027]\n",
+      "loss: 0.206712  [  128/ 1027]\n",
+      "loss: 0.329080  [  192/ 1027]\n",
+      "loss: 0.272741  [  256/ 1027]\n",
+      "loss: 0.402812  [  320/ 1027]\n",
+      "loss: 0.342310  [  384/ 1027]\n",
+      "loss: 0.222391  [  448/ 1027]\n",
+      "loss: 0.254685  [  512/ 1027]\n",
+      "loss: 0.254607  [  576/ 1027]\n",
+      "loss: 0.211176  [  640/ 1027]\n",
+      "loss: 0.248827  [  704/ 1027]\n",
+      "loss: 0.180324  [  768/ 1027]\n",
+      "loss: 0.213989  [  832/ 1027]\n",
+      "loss: 0.204812  [  896/ 1027]\n",
+      "loss: 0.160941  [  960/ 1027]\n",
+      "Test Error: \n",
+      " Accuracy: 80.1%, Avg loss: 1.034095 \n",
+      "\n",
+      "Epoch 3:\n",
+      "----------------------------\n"
      ]
     }
    ],
    "source": [
-    "train_loop(train_dataloader, base_model, criterion, optimizer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "585a5310-72ad-44a3-9326-05a661173680",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "208f0737-f79a-42da-9097-84ee1bafd62c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'stop' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/yv/nkm_y3rj0bj50pcbjh23kfd80000gn/T/ipykernel_3032/3957423419.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mstop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'stop' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "stop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3aba90ad-c06d-418d-b63b-ec0bbd4612a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X.shape[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "07c3b7b5-36f8-4853-8157-482d50c03877",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for batch, (X, y) in enumerate(train_dataloader):\n",
-    "    print(batch )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c5d1af89-5ad3-46bc-8125-3c1d787e3425",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#For Loop\n",
-    "epochs = 5\n",
-    "\n",
-    "base_model.train()\n",
+    "epochs = 3\n",
     "for e in range(epochs):\n",
-    "    print(\"-----------------------\")\n",
-    "    print(f\"Epoch {e + 1} Results\\n-----------------------\")\n",
-    "    \n",
-    "    #Training Loop\n",
-    "    size= len(train_dataloader.dataset)\n",
-    "        #compute predictions and loss\n",
-    "    for batch, (X,y) in enumerate(train_dataloader):\n",
-    "        \n",
-    "        #Make predictions and compute loss\n",
-    "        pred= base_model(X.float())\n",
-    "        loss= criterion(pred, y.flatten())\n",
-    "        \n",
-    "        #Always zero gradients for each batch\n",
-    "        optimizer.zero_grad() #Should i move this?\n",
-    "        \n",
-    "        #Calculate gradient        \n",
-    "        loss.backward()\n",
-    "        \n",
-    "        #Adjust model's weights\n",
-    "        optimizer.step()\n",
-    "        \n",
-    "        #Output stats\n",
-    "        if batch % 64 != 0:\n",
-    "            loss, curr = loss.item(), batch * len(X)\n",
-    "            print(f\"Loss: {loss:7f} [{curr:>5d}/{size:>5d}]\")  \n",
-    "    \n",
-    "    #Test Loop\n",
-    "    size = len(test_dataloader.dataset)\n",
-    "    num_batches= len(test_dataloader)\n",
-    "    test_loss, correct = 0,0\n",
-    "    \n",
-    "    with torch.no_grad(): #turns off gradient calculation\n",
-    "        for X, y in test_dataloader:\n",
-    "            pred= base_model(X.float())\n",
-    "            test_loss += criterion(pred, y.flatten()).item()\n",
-    "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
-    "    \n",
-    "    test_loss /= num_batches\n",
-    "    correct /= size\n",
-    "    print(f\"Test Accuracy:\\nAccuracy: {(100*correct)/size:>.01f}%, Avg loss: {test_loss:>5f}\\n\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99860e1c-1c7b-46cb-91dd-7832a0ef28d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06936a34-c60e-473a-a5e2-58f2af6e0dfb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "for batch, (X,y) in enumerate(train_dataloader):\n",
-    "    print(batch)\n",
-    "    print(X)\n",
-    "    print(y)\n",
-    "    break\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e1fc79a-b4bc-4e7a-a272-a1f1fc3d304c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y.flatten().to(device)"
+    "    print(f\"Epoch {e + 1}:\\n----------------------------\")\n",
+    "    train_loop(train_dataloader, base_model, criterion, optimizer)\n",
+    "    test_loop(test_dataloader, base_model, criterion)"
    ]
   },
   {
@@ -443,7 +332,9 @@
    "id": "64386f1c-988e-4018-a07d-f8d5f08e5dd9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "len(test_dataloader.dataset)"
+   ]
   },
   {
    "cell_type": "code",
@@ -451,7 +342,21 @@
    "id": "1ec38258-d3f2-4035-8c2a-dc28c66aa61d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model= base_model\n",
+    "size= len(test_dataloader.dataset)\n",
+    "num_batches= len(test_dataloader)\n",
+    "test_loss, correct = 0, 0\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "        for (X, y) in test_dataloader:\n",
+    "            preds= model(X.float())\n",
+    "\n",
+    "            test_loss += criterion(preds, y.flatten()).item()\n",
+    "            correct += (preds.argmax(1) == y).type(torch.float).sum().item()\n",
+    "            print(correct)\n",
+    "            print(y)"
+   ]
   },
   {
    "cell_type": "code",
