--- a/Notebooks/Models/ANN_Model_Sandbox.ipynb
+++ b/Notebooks/Models/ANN_Model_Sandbox.ipynb
@@ -262,64 +262,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "53109e87-f0a6-4e34-b516-d58f09f1bcd2",
+   "metadata": {},
+   "source": [
+    "Deploy"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9b34d409-fdd4-4bf3-b4b4-dd3503f72b7c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1:\n",
-      "----------------------------\n",
-      "loss: 0.697754  [    0/ 1027]\n",
-      "loss: 0.675377  [   64/ 1027]\n",
-      "loss: 0.623814  [  128/ 1027]\n",
-      "loss: 0.626251  [  192/ 1027]\n",
-      "loss: 0.601297  [  256/ 1027]\n",
-      "loss: 0.715795  [  320/ 1027]\n",
-      "loss: 0.516409  [  384/ 1027]\n",
-      "loss: 0.501635  [  448/ 1027]\n",
-      "loss: 0.439040  [  512/ 1027]\n",
-      "loss: 0.446919  [  576/ 1027]\n",
-      "loss: 0.432253  [  640/ 1027]\n",
-      "loss: 0.372604  [  704/ 1027]\n",
-      "loss: 0.354605  [  768/ 1027]\n",
-      "loss: 0.376940  [  832/ 1027]\n",
-      "loss: 0.320026  [  896/ 1027]\n",
-      "loss: 0.434664  [  960/ 1027]\n",
-      "Test Error: \n",
-      " Accuracy: 73.0%, Avg loss: 1.006387 \n",
-      "\n",
-      "Epoch 2:\n",
-      "----------------------------\n",
-      "loss: 0.366628  [    0/ 1027]\n",
-      "loss: 0.289138  [   64/ 1027]\n",
-      "loss: 0.206712  [  128/ 1027]\n",
-      "loss: 0.329080  [  192/ 1027]\n",
-      "loss: 0.272741  [  256/ 1027]\n",
-      "loss: 0.402812  [  320/ 1027]\n",
-      "loss: 0.342310  [  384/ 1027]\n",
-      "loss: 0.222391  [  448/ 1027]\n",
-      "loss: 0.254685  [  512/ 1027]\n",
-      "loss: 0.254607  [  576/ 1027]\n",
-      "loss: 0.211176  [  640/ 1027]\n",
-      "loss: 0.248827  [  704/ 1027]\n",
-      "loss: 0.180324  [  768/ 1027]\n",
-      "loss: 0.213989  [  832/ 1027]\n",
-      "loss: 0.204812  [  896/ 1027]\n",
-      "loss: 0.160941  [  960/ 1027]\n",
-      "Test Error: \n",
-      " Accuracy: 80.1%, Avg loss: 1.034095 \n",
-      "\n",
-      "Epoch 3:\n",
-      "----------------------------\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "epochs = 3\n",
+    "epochs = 10\n",
     "for e in range(epochs):\n",
     "    print(f\"Epoch {e + 1}:\\n----------------------------\")\n",
     "    train_loop(train_dataloader, base_model, criterion, optimizer)\n",
@@ -327,44 +284,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64386f1c-988e-4018-a07d-f8d5f08e5dd9",
+   "cell_type": "markdown",
+   "id": "11a2a73b-e0d9-41b7-9fb5-78a32c079e75",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "len(test_dataloader.dataset)"
+    "Ideas for improvement\n",
+    "* Updating opmitization algorithm\n",
+    "* More layers\n",
+    "* Preprocessing of the data"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ec38258-d3f2-4035-8c2a-dc28c66aa61d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model= base_model\n",
-    "size= len(test_dataloader.dataset)\n",
-    "num_batches= len(test_dataloader)\n",
-    "test_loss, correct = 0, 0\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "        for (X, y) in test_dataloader:\n",
-    "            preds= model(X.float())\n",
-    "\n",
-    "            test_loss += criterion(preds, y.flatten()).item()\n",
-    "            correct += (preds.argmax(1) == y).type(torch.float).sum().item()\n",
-    "            print(correct)\n",
-    "            print(y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79fc026a-2b6b-4886-aa9a-18f7fbf864c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
