--- a/Notebooks/Models/ANN_Model_Sandbox.ipynb
+++ b/Notebooks/Models/ANN_Model_Sandbox.ipynb
@@ -246,8 +246,8 @@
     "batch_size= 64\n",
     "\n",
     "#Create DataLoader iterable\n",
-    "train_dataloader= DataLoader(train_dataset, batch_size= batch_size, shuffle= False, drop_last= True)\n",
-    "test_dataloader= DataLoader(test_dataset, batch_size= len(test_dataset), shuffle= False)\n",
+    "train_dataloader= DataLoader(train_dataset, batch_size= batch_size, drop_last= True)\n",
+    "test_dataloader= DataLoader(test_dataset, batch_size= len(test_dataset))\n",
     "\n",
     "#Sanity Check\n",
     "for x, y in train_dataloader:\n",
