--- a/Notebooks/Models/CNN_Model_Sandbox.ipynb
+++ b/Notebooks/Models/CNN_Model_Sandbox.ipynb
@@ -25,7 +25,8 @@
     "\n",
     "#Import image loaders\n",
     "os.chdir(\"../../src/\")\n",
-    "from load_data import preview_images, load_images"
+    "from load_data import preview_images, load_images\n",
+    "from models import train_loop, test_loop"
    ]
   },
   {
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "47b644d8-5bd1-4a7e-9d21-e11ced405495",
    "metadata": {},
    "outputs": [],
@@ -178,23 +179,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e05bda1f-f43e-426f-8e11-6357a430862d",
    "metadata": {},
    "outputs": [],
    "source": [
     "class ConvNet(nn.Module):\n",
     "    def __init__(self):\n",
-    "        super(ConvNet, self).__init__ #Init parent class nn.Module\n",
-    "        self.conv1= nn.Conv2d(in_channels=3, 32, 3, 1)\n",
-    "        self.conv2= nn.Conv2d(32, 64, 3, 1)\n",
+    "        super(ConvNet, self).__init__() #Init parent class nn.Module\n",
+    "        self.conv1= nn.Conv2d(in_channels=3,out_channels= 32,kernel_size= 4, stride=1)\n",
+    "        self.conv2= nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride= 1)\n",
     "        \n",
-    "        self.dropout1= nn.Dropout2d(.25)\n",
-    "        self.dropout2= nn.Dropout2d(.5)\n",
+    "        self.pool= nn.MaxPool2d(kernel_size= 3, stride= 1, padding=0 )\n",
+    "        self.fc1= nn.Linear(in_features= 64, out_features=256)\n",
+    "        self.fc2= nn.Linear(in_features= 256, out_features= 2)\n",
     "        \n",
-    "        self.fc1= nn.Linear()\n",
-    "        self.fc2= nn.Linear()\n",
-    "        \n",
+    "    def forward(self, x):\n",
+    "        x= F.relu(self.conv1(x))\n",
+    "        x= self.pool(F.relu(self.conv2(x)))\n",
+    "        x= torch.flatten(x, 1)\n",
+    "        x= self.fc1(x)\n",
+    "        x= self.fc2(x)\n",
+    "        return x\n",
+    "\n",
     "        \n",
     "        \n",
     "        "
@@ -202,27 +209,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "28a235c3-c03a-4410-94c5-117e64ed3eda",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "conv_net= ConvNet()\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cda95d72-4e34-49c9-9789-8177069fe4d3",
+   "execution_count": 13,
+   "id": "09434293-cdeb-4290-ad7f-2c0487ed3eee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "batch_size= 64\n",
+    "criterion= nn.CrossEntropyLoss()\n",
+    "\n",
+    "from torch import optim\n",
+    "\n",
+    "optimizer= optim.SGD(conv_net.parameters(), lr= 10**-3, momentum=.9)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "73f69c2c-adec-4e87-b63e-c7f7cd0c1a78",
+   "execution_count": 10,
+   "id": "33d0afda-de01-471c-8e2b-f316a0a53d9e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create data loaders\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "train_dataloader= DataLoader(train_dataset, batch_size= batch_size, drop_last= True)\n",
+    "test_dataloader= DataLoader(test_dataset, batch_size= len(test_dataset))"
+   ]
   },
   {
    "cell_type": "code",
@@ -230,7 +252,11 @@
    "id": "9abed643-04c2-4444-99b8-8ba2201c4ef5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "epochs= 2\n",
+    "for e in epochs:\n",
+    "    train_loop(train_dataloader, conv_net, "
+   ]
   },
   {
    "cell_type": "code",
