--- a/Notebooks/Models/CNN_Model_Sandbox.ipynb
+++ b/Notebooks/Models/CNN_Model_Sandbox.ipynb
@@ -187,15 +187,15 @@
     "class ConvNet(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(ConvNet, self).__init__() #Init parent class nn.Module\n",
-    "        self.conv1= nn.Conv2d(in_channels=3,out_channels= 32,kernel_size= 4, stride=1)\n",
+    "        self.conv1= nn.Conv2d(in_channels=4,out_channels= 32,kernel_size= 4, stride=1)\n",
     "        self.conv2= nn.Conv2d(in_channels=32, out_channels=64, kernel_size=3, stride= 1)\n",
     "        \n",
     "        self.pool= nn.MaxPool2d(kernel_size= 3, stride= 1, padding=0 )\n",
-    "        self.fc1= nn.Linear(in_features= 64, out_features=256)\n",
+    "        self.fc1= nn.Linear(in_features= 5419584, out_features=256)\n",
     "        self.fc2= nn.Linear(in_features= 256, out_features= 2)\n",
     "        \n",
     "    def forward(self, x):\n",
-    "        x= F.relu(self.conv1(x))\n",
+    "        x= self.pool(F.relu(self.conv1(x)))\n",
     "        x= self.pool(F.relu(self.conv2(x)))\n",
     "        x= torch.flatten(x, 1)\n",
     "        x= self.fc1(x)\n",
@@ -210,16 +210,53 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "28a235c3-c03a-4410-94c5-117e64ed3eda",
+   "id": "3be8ae43-d177-4f0b-b2c6-9d61d56b4b58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "conv_net= ConvNet()\n"
+    "conv_net= ConvNet()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
+   "id": "4ff5e661-b4a2-4ee8-99df-b33a073eb834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Math computations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "b1595916-ee93-4cb8-9c21-906d287c537a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ConvNet(\n",
+       "  (conv1): Conv2d(4, 32, kernel_size=(4, 4), stride=(1, 1))\n",
+       "  (conv2): Conv2d(32, 64, kernel_size=(3, 3), stride=(1, 1))\n",
+       "  (pool): MaxPool2d(kernel_size=3, stride=1, padding=0, dilation=1, ceil_mode=False)\n",
+       "  (fc1): Linear(in_features=5419584, out_features=256, bias=True)\n",
+       "  (fc2): Linear(in_features=256, out_features=2, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conv_net"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "09434293-cdeb-4290-ad7f-2c0487ed3eee",
    "metadata": {},
    "outputs": [],
@@ -234,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "33d0afda-de01-471c-8e2b-f316a0a53d9e",
    "metadata": {},
    "outputs": [],
@@ -248,14 +285,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "9abed643-04c2-4444-99b8-8ba2201c4ef5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1:\n",
+      "===================\n",
+      "loss: 0.692804  [    0/ 1027]\n",
+      "loss: 20.570141  [   64/ 1027]\n",
+      "loss: 63.445431  [  128/ 1027]\n",
+      "loss: 0.901782  [  192/ 1027]\n",
+      "loss: 0.708024  [  256/ 1027]\n",
+      "loss: 0.643452  [  320/ 1027]\n",
+      "loss: 0.695738  [  384/ 1027]\n",
+      "loss: 0.704088  [  448/ 1027]\n",
+      "loss: 0.744378  [  512/ 1027]\n",
+      "loss: 0.717623  [  576/ 1027]\n",
+      "loss: 0.704415  [  640/ 1027]\n",
+      "loss: 0.714012  [  704/ 1027]\n",
+      "loss: 0.700090  [  768/ 1027]\n",
+      "loss: 0.697714  [  832/ 1027]\n",
+      "loss: 0.690264  [  896/ 1027]\n",
+      "loss: 0.697732  [  960/ 1027]\n",
+      "Test Error: \n",
+      " Accuracy: 53.5%, Avg loss: 0.689050 \n",
+      "\n",
+      "Epoch 2:\n",
+      "===================\n",
+      "loss: 0.691126  [    0/ 1027]\n",
+      "loss: 0.685947  [   64/ 1027]\n",
+      "loss: 0.672627  [  128/ 1027]\n",
+      "loss: 0.664983  [  192/ 1027]\n",
+      "loss: 0.661662  [  256/ 1027]\n",
+      "loss: 0.628840  [  320/ 1027]\n",
+      "loss: 0.635589  [  384/ 1027]\n",
+      "loss: 0.637022  [  448/ 1027]\n",
+      "loss: 0.516646  [  512/ 1027]\n",
+      "loss: 1.042229  [  576/ 1027]\n",
+      "loss: 1.461056  [  640/ 1027]\n",
+      "loss: 0.602194  [  704/ 1027]\n",
+      "loss: 0.667267  [  768/ 1027]\n",
+      "loss: 0.706034  [  832/ 1027]\n",
+      "loss: 0.667054  [  896/ 1027]\n",
+      "loss: 0.655264  [  960/ 1027]\n",
+      "Test Error: \n",
+      " Accuracy: 62.5%, Avg loss: 0.664831 \n",
+      "\n",
+      "Epoch 3:\n",
+      "===================\n",
+      "loss: 0.660835  [    0/ 1027]\n",
+      "loss: 0.659343  [   64/ 1027]\n",
+      "loss: 0.657375  [  128/ 1027]\n",
+      "loss: 0.614300  [  192/ 1027]\n",
+      "loss: 0.670176  [  256/ 1027]\n",
+      "loss: 0.611965  [  320/ 1027]\n",
+      "loss: 0.562921  [  384/ 1027]\n",
+      "loss: 0.514865  [  448/ 1027]\n",
+      "loss: 0.542345  [  512/ 1027]\n",
+      "loss: 0.512184  [  576/ 1027]\n",
+      "loss: 0.650105  [  640/ 1027]\n",
+      "loss: 0.461858  [  704/ 1027]\n",
+      "loss: 0.599474  [  768/ 1027]\n",
+      "loss: 0.550094  [  832/ 1027]\n",
+      "loss: 0.585740  [  896/ 1027]\n",
+      "loss: 0.441467  [  960/ 1027]\n",
+      "Test Error: \n",
+      " Accuracy: 72.3%, Avg loss: 0.549230 \n",
+      "\n",
+      "Epoch 4:\n",
+      "===================\n",
+      "loss: 0.540633  [    0/ 1027]\n",
+      "loss: 0.505326  [   64/ 1027]\n",
+      "loss: 0.525822  [  128/ 1027]\n",
+      "loss: 0.522623  [  192/ 1027]\n",
+      "loss: 0.652897  [  256/ 1027]\n",
+      "loss: 0.565907  [  320/ 1027]\n",
+      "loss: 0.499149  [  384/ 1027]\n",
+      "loss: 0.371706  [  448/ 1027]\n",
+      "loss: 0.470527  [  512/ 1027]\n",
+      "loss: 0.490501  [  576/ 1027]\n",
+      "loss: 0.561302  [  640/ 1027]\n",
+      "loss: 0.433648  [  704/ 1027]\n",
+      "loss: 0.473150  [  768/ 1027]\n",
+      "loss: 0.504440  [  832/ 1027]\n",
+      "loss: 0.538822  [  896/ 1027]\n",
+      "loss: 0.382876  [  960/ 1027]\n",
+      "Test Error: \n",
+      " Accuracy: 79.7%, Avg loss: 0.444685 \n",
+      "\n",
+      "Epoch 5:\n",
+      "===================\n",
+      "loss: 0.455465  [    0/ 1027]\n",
+      "loss: 0.469310  [   64/ 1027]\n",
+      "loss: 0.422722  [  128/ 1027]\n",
+      "loss: 0.385587  [  192/ 1027]\n",
+      "loss: 0.656886  [  256/ 1027]\n",
+      "loss: 0.429501  [  320/ 1027]\n",
+      "loss: 0.414334  [  384/ 1027]\n",
+      "loss: 0.348881  [  448/ 1027]\n",
+      "loss: 0.341508  [  512/ 1027]\n",
+      "loss: 0.353307  [  576/ 1027]\n",
+      "loss: 0.493182  [  640/ 1027]\n",
+      "loss: 0.357901  [  704/ 1027]\n",
+      "loss: 0.395029  [  768/ 1027]\n",
+      "loss: 0.481600  [  832/ 1027]\n",
+      "loss: 0.417817  [  896/ 1027]\n",
+      "loss: 0.333723  [  960/ 1027]\n",
+      "Test Error: \n",
+      " Accuracy: 70.7%, Avg loss: 0.819797 \n",
+      "\n",
+      "DONE!\n"
+     ]
+    }
+   ],
    "source": [
-    "epochs= 2\n",
-    "for e in epochs:\n",
-    "    train_loop(train_dataloader, conv_net, "
+    "epochs= 5\n",
+    "for e in range(epochs):\n",
+    "    print(f\"Epoch {e+1}:\\n===================\")\n",
+    "    train_loop(train_dataloader, conv_net, criterion, optimizer)\n",
+    "    test_loop(test_dataloader, conv_net, criterion)\n",
+    "\n",
+    "print(\"DONE!\")"
    ]
   },
   {
